umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_tetrahydroxy_1_4_benzoquinone_biscarbonate.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D2h
order: 8
equivalence_sets:
  - - C(0)
    - C(1)
  - - C(2)
    - C(3)
  - - O(4)
    - O(5)
  - - O(6)
    - O(7)
  - - C(8)
    - C(9)
    - C(10)
    - C(11)
  - - O(12)
    - O(13)
    - O(14)
    - O(15)
