umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_trioxane.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C3v
order: 6
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
  - - O(3)
    - O(4)
    - O(5)
  - - H(6)
    - H(7)
    - H(8)
  - - H(9)
    - H(10)
    - H(11)
