umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_triptycene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3h
order: 12
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
    - H(4)
    - H(5)
  - - C(6)
    - C(7)
  - - C(8)
    - C(9)
  - - C(10)
    - C(11)
    - C(12)
    - C(13)
    - C(14)
    - C(15)
  - - C(16)
    - C(17)
    - C(18)
    - C(19)
    - C(20)
    - C(21)
  - - H(22)
    - H(23)
    - H(24)
    - H(25)
    - H(26)
    - H(27)
  - - H(28)
    - H(29)
    - H(30)
    - H(31)
    - H(32)
    - H(33)
